@@ -32,6 +32,9 @@ Core and builtins
 Library
 -------
 
+- ctypes will now work correctly on 32-bit systems when Python is
+  configured with --with-system-ffi.
+
 - Bug #1777530: ctypes.util.find_library uses dump(1) instead of
   objdump(1) on Solaris.
 
